@@ -180,49 +180,48 @@ function read_complete_file_into_array($dFileName, $string_needle) {
 			$line = fgets($fp, (6 * 1024));
 
 			if (!$inComment) {
-				if (substr($line, 0, 2) == $slashStar) {
+				if (substr(trim($line), 0, 2) == $slashStar) {
 					$inComment = true;
 				}
 			}
 
 			$foundNeedle = false;
 			if (!$inComment) {
+				$line = rtrim($line);
 				foreach ($array_needle as $needle) {
-					if (!$foundNeedle && $x = strpos(trim($line), $needle)) {
-						if ($x == 1) {
-							$line_mine = $line;
-							$line = trim($line);
-							$key = trim(substr($line, 0, strpos($line, "]") + 1));
-							$ct = preg_match("/=\s*\"(.*)\"/", $line, $match);
-							# if ($ct>0) $content = trim($match[1]);
-							if ($ct>0) $content = $match[1];
-							else $content = "";
-							$InfoArray[$LineCounter][0] = $key;				// keystring
-							# print "#".$key."# ";
-							$InfoArray[$LineCounter][1] = $content;			// message of keystring
-                	
-							# print "#".$content."#<br />";
-							if ($content != "") {
-								$InfoArray[$LineCounter][2] = get_last_string($line_mine, $content);	// pos of the first char of the message
-							}
-							else $InfoArray[$LineCounter][2] = "";
-                	
-							$InfoArray[$LineCounter][3] = $line_mine;			// complete line
-							$foundNeedle = true;
+					$keyPos = strpos($line, $needle);
+					if ($keyPos === 0) {
+						$keyLen = strpos($line, "]") + 1;
+						$key = substr($line, 0, $keyLen);
+						$InfoArray[$LineCounter][0] = $key;					// Keystring
+						$InfoArray[$LineCounter][3] = $line;				// Complete line
+						$ct = preg_match("/=\s*\"(.*)\"/", $line, $match, PREG_OFFSET_CAPTURE, $keyLen);
+						if ($ct == 0) {
+							// Look for text enclosed in apostrophes
+							$ct = preg_match("/=\s*'(.*)'/", $line, $match, PREG_OFFSET_CAPTURE, $keyLen);
 						}
+						if ($ct>0) {
+							$InfoArray[$LineCounter][1] = $match[1][0];		// Text
+							$InfoArray[$LineCounter][2] = $match[1][1];		// Text position
+						} else {
+							$InfoArray[$LineCounter][1] = '';
+							$InfoArray[$LineCounter][2] = '';
+						}
+
+						$foundNeedle = true;
+						break;
 					}
 		    	}
 	    	}
 			if (!$foundNeedle) $InfoArray[$LineCounter][0] = $line;
 			$LineCounter++;
 
-			if (substr($line, 0, 2) == $starSlash) $inComment = false;
-			if (substr(trim($line), -2) == $starSlash) $inComment = false;
+			if (substr(trim($line), 0, 2) == $starSlash) $inComment = false;
+			if (substr($line, -2) == $starSlash) $inComment = false;
 		}
 		fclose($fp);
 	}
 	else print "E R R O R !!!";
-	# exit;
 
 	UnLockFile($Filename);
 
@@ -245,17 +244,6 @@ function find_in_file($MsgNr, $dlang_file) {
 }
 
 //-----------------------------------------------------------------
-function find_key_in_new_language_old($new_array, $string_needle) {
-	$dummy = "";
-	$dcount = 0;
-	while ($new_array[$dcount] != "") {
-		if ($new_array[$dcount][0] == $string_needle) return $dcount;
-		$dcount++;
-	}
-	return false;
-}
-
-//-----------------------------------------------------------------
 function write_array_into_file($dFileName01, $writeArray, $add_new_message_at_line, $new_message_string) {
 	global $PGV_BASE_DIRECTORY;
 
@@ -265,25 +253,32 @@ function write_array_into_file($dFileName01, $writeArray, $add_new_message_at_li
 	$LineCounter = 0;
 	if ($fp = @fopen($Filename, "w")) {
 		$could_write = true;
+		$inPHP = false;
 		foreach ($writeArray as $indexval => $var) {
+			if (strtolower(substr($var[0],0,5))=='<?php') $inPHP = true;
+			if (!$inPHP && rtrim($var[0])=='') {
+				$LineCounter++;
+				continue;
+			}
 			/* A new message which didn't exist before inside the language file */
 			if ($LineCounter == $add_new_message_at_line) {
-				fwrite($fp, $new_message_string.PGV_EOL);
+				fwrite($fp, rtrim($new_message_string).PGV_EOL);
 				$LineCounter++;
 			}
-    	
+
 			if (empty($var[1])) {
 				if (isset($var[3])) {
-					/* Message content is empty */
-					fwrite($fp, $var[3]);
+					fwrite($fp, rtrim($var[3]).PGV_EOL);
 				} else {
-					/* Outlined file content */
-					fwrite($fp, $var[0]);
+					fwrite($fp, rtrim($var[0]).PGV_EOL);
 				}
 			} else {
-				$output = substr($var[3], 0, $var[2]).$var[1]."\";".PGV_EOL;
+				$textTerminator = substr($var[3], ($var[2]-1), 1).';';		// Repeat the leading quote or apostrophe
+				$comment = substr($var[3], (strrpos($var[3], $textTerminator)+2));
+				$output = substr($var[3], 0, $var[2]).$var[1].$textTerminator.$comment.PGV_EOL;
 				fwrite($fp, $output);
 			}
+			if (substr($var[0],0,2)=='?>') $inPHP = false;
 			$LineCounter++;
 		}
 		fclose($fp);
@@ -306,7 +301,7 @@ function read_export_file_into_array($dFileName, $string_needle) {
 	$dFound = ($fp = @fopen($Filename, "r"));
 
 	if (!$dFound)  {
-		print "Error file not found"; 
+		print "Error file not found";
 		exit;
 	} else {
 		$inComment = false;		// Indicates whether we're skipping from "/*" to "*/"
@@ -329,14 +324,15 @@ function read_export_file_into_array($dFileName, $string_needle) {
 			}
 
 			$foundNeedle = false;
+			$line = trim($line);
 			foreach ($array_needle as $needle) {
-				if (!$foundNeedle && $x = strpos(trim($line), $needle)) {
+				if (!$foundNeedle && $x = strpos($line, $needle)) {
 					if ($x == 1) {
-						$line_mine = $line;
-						$line = trim($line);
-						$key = trim(substr($line, 0, strpos($line, "]") + 1));
-						$ct = preg_match("/=\s*\"(.*)\";/", $line, $match);
-						if ($ct>0) $content = $match[1];
+						$keyLen = strpos($line, "]") + 1;
+						$key = trim(substr($line, 0, $keyLen));
+						$ct = preg_match("/=\s*\"(.*)\";/", $line, $match, PREG_OFFSET_CAPTURE, $keyLen);
+						if ($ct==0) $ct = preg_match("/=\s*'(.*)';/", $line, $match, PREG_OFFSET_CAPTURE, $keyLen);
+						if ($ct>0) $content = $match[1][0];
 						else $content = "";
 						$InfoArray[$LineCounter][0] = $key;				// keystring
 						$InfoArray[$LineCounter][1] = $content;			// message of keystring
@@ -350,22 +346,7 @@ function read_export_file_into_array($dFileName, $string_needle) {
 	}
 	return $InfoArray;
 }
-//-----------------------------------------------------------------
-function get_last_string($hay, $need) {
-//	$getLastStr = 0;
-	$pos = strpos($hay, $need);
-	if (is_int ($pos)) { //this is to decide whether it is "false" or "0"
-//		while($pos) {
-//			$getLastStr = $getLastStr + $pos + strlen($need);
-//			$hay = substr ($hay , $pos + strlen($need));
-//			$pos = strpos($hay, $need);
-//		}
-//		return $getLastStr - strlen($need);
-		return $pos;
-	} else {
-		return -1; //if $need wasn't found it returns "-1" , because it could return "0" if it's found on position "0".
-	}
-}
+
 //-----------------------------------------------------------------
 function check_bom() {
 	global $language_settings, $pgv_lang;
